Added some verification stages to the code . To check whether the model is working correctly.

--- a/DataPreProcessing.ipynb
+++ b/DataPreProcessing.ipynb
@@ -812,11 +812,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"Structured_Data/TIET_Events.text\",\"w\") as f:\n",
+    "with open(\"Structured_Data/TIET_Events.txt\",\"w\") as f:\n",
     "    for _,row in Events.iterrows():\n",
     "        f.write(f\"### {row['Cultural Event']}\\n\")\n",
     "        f.write(f\"Month it took place - {row['Month']}\\n\")"
